# mrfutils-rs

./: .gitignore  Cargo.toml  README.md  example-input.txt  thing.txt
scripts/: hyperfine.sh  run.sh
src/: main.rs  utils.rs
