[package]
name = "mrfutils-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rev_buf_reader = "0.3.0"
tempfile = "3.3.0"
urlparse = "0.7.3"
reqwest = { version = "0.11.13", features = ["blocking"] }
flate2 = "1.0.25"
ijson = "0.1.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.6"
anyhow = "1.0.68"
rayon = "1.6.1"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]